--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h2>🟢 Зелёное объявление</h2>
         <label for="nickname">Никнейм:</label>
         <input type="text" id="nickname" class="nickname-input" placeholder="Ваш никнейм" />
-        <div id="greenArea" class="paste-area" contenteditable="true" tabindex="0"></div>
+        <div id="greenArea" class="paste-area" contenteditable="true" tabindex="0" style="max-width:100%;"></div>
         <div><strong>Предпросмотр:</strong></div>
         <div id="greenPreview"></div>
         <button id="sendGreen" class="send-button" disabled>Отправить зелёное</button>
@@ -144,7 +144,7 @@
         <h2>🔴 Красное объявление</h2>
         <label for="nickname">Никнейм:</label>
         <input type="text" id="nickname" class="nickname-input" placeholder="Ваш никнейм" />
-        <div id="redArea" class="paste-area" contenteditable="true" tabindex="0"></div>
+        <div id="redArea" class="paste-area" contenteditable="true" tabindex="0" style="max-width:100%;"></div>
         <div><strong>Предпросмотр:</strong></div>
         <div id="redPreview"></div>
         <button id="sendRed" class="send-button" disabled>Отправить красное</button>
@@ -181,7 +181,7 @@
           reader.onload = function (e) {
             const result = e.target.result;
             setImage(result);
-            previewEl.innerHTML = `<img src="${result}" class="image-preview" />`;
+            previewEl.innerHTML = `<img src="${result}" class="image-preview" style="max-width:100%; max-height:200px; object-fit:contain; display:block;" />`;
             button.disabled = false;
           };
           reader.readAsDataURL(file);
