--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       font-family: sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #e9ecef;
+      background-color: #2f3237;
     }
 
     .container {
